# full-exemplo-pi

./: .env  .env.sample  .gitignore  README.md  getIp.js  getIp.py
GrandOrvalho_Frontend_Web/: .env  package-lock.json  package.json
GrandOrvalho_Frontend_Web/scripts/: set_my_ip.js
GrandOrvalho_Frontend_Web/src/: App.vue
GrandOrvalho_Frontend_Web/src/api/: clientes.js  consultas.js  especies.js  racas.js
GrandOrvalho_Frontend_Web/src/assets/: BancoDados.js  base.css
GrandOrvalho_Frontend_Web/src/plugins/: api.js
GrandeOrvalho_Frontend_Mobile1/: app.json  package-lock.json  package.json
GrandeOrvalho_db_django/: .env_exemplo  .gitignore  .isort.cfg  .pdm-python  db.sqlite3  pyproject.toml  requirements.txt
GrandeOrvalho_db_django/GrandeOrvalho/: admin.py  apps.py  models.py  serializers.py  views.py
GrandeOrvalho_db_django/GrandeOrvalho/migrations/: 0001_initial.py  0002_consulta_animais.py  0003_animais_capa.py  0004_alter_animais_capa_alter_animais_idade.py  0005_alter_animais_idade.py  0006_tipousuario.py  0007_alter_tipousuario_cliente_and_more.py  0008_remove_cliente_email_remove_cliente_senha_and_more.py  0009_alter_tipousuario_options.py  0010_delete_tipousuario.py  0011_remove_cliente_sexo_remove_funcionario_sexo_and_more.py  0012_alter_cliente_genero_alter_funcionario_genero.py  0013_delete_funcionario_remove_animais_sexo_and_more.py  0014_animais_tipo_animal.py  0015_remove_animais_tipo_animal.py  0016_alter_animais_genero.py
GrandeOrvalho_db_django/GrandeOrvalho/models/: __init__.py  animais.py  cliente.py  consulta.py  especie.py  funcionario.py  raca.py  tipo_usuario.py
GrandeOrvalho_db_django/GrandeOrvalho/serializers/: __init__.py  animais.py  cliente.py  consulta.py  especie.py  funcionario.py  raca.py  tipo_usuario.py
GrandeOrvalho_db_django/GrandeOrvalho/views/: __init__.py  animais.py  cliente.py  consulta.py  especie.py  funcionario.py  raca.py  tipo_usuario.py
GrandeOrvalho_db_django/config/: settings.py  urls.py
GrandeOrvalho_db_django/scripts/: set_my_ip.py
GrandeOrvalho_db_django/uploader/: admin.py  apps.py  router.py
GrandeOrvalho_db_django/uploader/migrations/: 0001_initial.py
GrandeOrvalho_db_django/uploader/models/: __init__.py  document.py  image.py
GrandeOrvalho_db_django/uploader/serializers/: __init__.py  document.py
GrandeOrvalho_db_django/usuario/: admin.py  apps.py  forms.py  models.py  router.py  serializers.py  views.py
GrandeOrvalho_db_django/usuario/migrations/: 0001_initial.py  0002_usuario_capa.py  0003_remove_usuario_capa.py  0004_tipousuario.py  0005_remove_tipousuario_user.py  0006_usuario_capa_usuario_genero_usuario_idade_and_more.py  0007_alter_usuario_genero.py  0008_alter_usuario_genero.py
GrandeOrvalho_db_django/utils/: files.py
app/: .env.sample  App.js  app.json  babel.config.js  eas.json  package-lock.json  package.json
app/scripts/: set_my_ip.js
backend/: .env  .env.sample  .gitignore  db.sqlite3  pyproject.toml  set_my_ip.py
backend/config/: settings.py  urls.py
backend/movies/: admin.py  models.py  serializers.py  views.py
backend/movies/migrations/: 0001_initial.py  0002_movie.py  0003_person_castingmember.py
backend/uploader/: views.py
backend/uploader/migrations/: 0001_initial.py
backend/uploader/models/: document.py  image.py
backend/uploader/serializers/: document.py  image.py
backend/utils/: files.py
web/: package-lock.json  package.json  set_my_ip.js
web/src/: App.vue  main.js
(+62 files in other folders)
