[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Eduardo da Silva",email = "eduardo.silva@gmail.com"},
]
dependencies = [
    "django>=4.2.4",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.2.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

